--- a/angular.json
+++ b/angular.json
@@ -20,11 +20,11 @@
             "tsConfig": "tsconfig.app.json",
             "aot": false,
             "assets": [
-              "src/favicon.ico",
+              "src/assets/images/favicon.ico",
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/assets/css/application.css"
             ],
             "scripts": []
           },
