added packages need to connect to Azure Search

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "~8.2.11",
     "express": "^4.17.1",
     "govuk-frontend": "^3.3.0",
+    "nconf": "^0.10.0",
+    "node-fetch": "^2.6.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -35,6 +37,10 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.5.0",
+    "eslint-plugin-import": "^2.18.2",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.0.2",
     "jasmine-core": "~3.4.0",
@@ -45,6 +51,7 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "nodemon": "^1.19.4",
+    "prettier": "^1.19.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
